fixed title alignment

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,10 +9,10 @@
 @import '~@fortawesome/fontawesome-free-webfonts/scss/fa-solid';
 @import '~@fortawesome/fontawesome-free-webfonts/scss/fontawesome';
 @import '~vue-multiselect/dist/vue-multiselect.min.css';
-@font-face{
+
+@font-face {
   font-family: 'Open Sans';
-	src: url('/fonts/OpenSans.ttf')
-	     format('truetype');
+  src: url('/fonts/OpenSans.ttf') format('truetype');
 }
 
 // .search-bar {
@@ -20,7 +20,8 @@
 //   @extend justify-content-end;
 // }
 
-.multiselect__tag-icon:focus, .multiselect__tag-icon:hover {
+.multiselect__tag-icon:focus,
+.multiselect__tag-icon:hover {
   background: #788793 !important;
 }
 
@@ -28,10 +29,14 @@
   min-height: 35px;
   padding: 7px 40px 0 7px;
 }
+
 .multiselect__select {
   height: 35px;
 }
-.multiselect, .multiselect__input, .multiselect__single {
+
+.multiselect,
+.multiselect__input,
+.multiselect__single {
   font-size: 14px;
 }
 
@@ -259,7 +264,7 @@ a.btn-action {
 h1.page-title {
   font-size: 18px;
   font-weight: 600;
-  margin-bottom: 0;
+
   margin-right: 16px;
 }
 
